feat(NOT-180): Tweaks to the get notifications endpoint implementation
