# docs/flex/openapi.yml
@@ -6,12 +6,6 @@ info:
 servers:
   - url: /api
 
-securitySchemes:
-  bearerAuth:
-    type: http
-    scheme: bearer
-    bearerFormat: AWS_IAM_SIGV4
-
 security:
   - bearerAuth: []
 
@@ -154,6 +148,12 @@ paths:
           description: Unexpected error
 
 components:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: AWS_IAM_SIGV4
+
   schemas:
     Notification:
       type: object
@@ -162,7 +162,7 @@ components:
         - Status
         - NotificationBody
         - NotificationTitle
-        - DispatchedAt
+        - DispatchedDateTime
       properties:
         NotificationID:
           type: string
@@ -175,15 +175,15 @@ components:
         NotificationBody:
           type: string
           description: Contents of the notification to be displayed on push notification
+        DispatchedDateTime:
+          type: string
+          format: date-time
         MessageTitle:
           type: string
           description: (Optional) Title of the message displayed in the GovUK app's notification centre, falls back on notification title
         MessageBody:
           type: string
           description: (Optional) Contents of the message displayed in the GovUK app's notification centre, falls back on notification body
-        DispatchedAt:
-          type: string
-          format: date-time
 
     Status:
       type: string
