# src/lambdas/flex/http.getNotifications/handler.test.unit.ts
@@ -48,11 +48,11 @@ describe('getNotifications Handler', () => {
         APIGWExtendedID: 'Test',
       },
     ],
-    DispatchedAt: '2026-02-13',
+    DispatchedDateTime: '2026-02-13',
   } as IMessageRecord;
 
   const mockResponse: IFlexNotification = {
-    DispatchedAt: '2026-02-13',
+    DispatchedDateTime: '2026-02-13',
     MessageBody: 'Open Notification Centre to read your notifications',
     MessageTitle: 'You have a new Message',
     NotificationBody: 'Here is the Notification body.',
