# src/lambdas/flex/http.patchNotification/handler.test.unit.ts
@@ -46,7 +46,7 @@ describe('PatchNotification Handler', () => {
         APIGWExtendedID: 'Test',
       },
     ],
-    DispatchedAt: '2026-02-13',
+    DispatchedDateTime: '2026-02-13',
   } as IMessageRecord;
 
   beforeEach(() => {
